# concordium-dapp-examples

./: .dockerignore  .eslintignore  .gitignore  .gitmodules  .prettierrc  Cargo.toml  README.md  WORKFLOW-UPDATE.md  cargo.toml  rust-toolchain.toml
.github/workflows/: cargo-deny-matrix.yml  ci.yaml  docker-build-rust.yaml  docker-build-typescript.yaml  docker-build.yaml  release-allowlist-backend.yaml  release-allowlist-frontend.yaml  release-allowlist-manager-backend.yaml  release-allowlist-manager-verifier.yaml  release-auction-sponsored-txs-docker.yml  release-compliant-reward-distribution-indexer-docker.yml  release-compliant-reward-distribution-server-docker.yml  release-dapp-esealing-docker.yaml  release-dapp-voting-docker.yaml  release-dapp-wccd-docker.yaml  release-euro-demo.yml  release-euroe-demo-docker.yml  release-gallery-docker.yml  release-locks-frontend.yaml  release-rbac-frontend.yaml  release-sign-message-docker.yml  release-simple-age-verification-docker.yml  release-sponsored-txs-docker.yml  release-testnet-faucet-docker.yml  release-track-and-trace-dapp-docker.yml  release-track-and-trace-indexer-docker.yml  release-track-and-trace-server-docker.yml  rust-ci.yaml  (+6 more)
DevnetSponsoredTx/: README.md  docker-compose.yml
add-example-Web3Id/: README.md  index.html  package.json
airdrop/: package-lock.json  package.json  readme.md  vite.config.ts
airdrop/smart-contract/: .gitignore  Cargo.toml
airdrop/smart-contract/merkle_tree/: .gitignore  Cargo.toml
airdrop/smart-contract/merkle_tree/src/: lib.rs
airdrop/smart-contract/src/: README.md  lib.rs
allowListManagerFaucet/: .gitignore  README.md  docker-compose.yml
compliant-reward-distribution/: .dockerignore  README.md  docker-compose.yml
eSealing/: CHANGELOG.md  README.md  index.html  package.json
euroe-demo/: .dockerignore  .eslintrc.cjs  .prettierrc  CHANGELOG.md  Dockerfile  README.md  index.html  package.json  tsconfig.json
gallery/: .eslintcache  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .yarnrc.yml  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  esbuild.config.ts  package.json  tsconfig.json
gallery/verifier/: CHANGELOG.md  Cargo.toml  README.md
gallery/verifier/config/: names.json  statement.json
gallery/verifier/src/: handlers.rs  main.rs  types.rs
low-code-carbon-credits-marketplace/: README.md  package.json
low-code-carbon-credits-marketplace/contracts/: .gitignore  Cargo.toml  README.md  package.json
low-code-carbon-credits-marketplace/contracts/src/: lib.rs
low-code-carbon-credits-marketplace/contracts/src/carbon_credit_market/: add.rs  contract_types.rs  error.rs  events.rs  init.rs  list.rs  list_owned.rs  mod.rs  on_cis2_recieved.rs  state.rs  transfer.rs  utils.rs
low-code-carbon-credits-marketplace/contracts/src/carbon_credits/: balance_of.rs  contract_types.rs  error.rs  events.rs  init.rs  is_verified.rs  is_verifier.rs  maturity_of.rs  mint.rs  mod.rs  on_cis2_recieved.rs  operator_of.rs  retire.rs  retract.rs  state.rs  supports.rs  token_metadata.rs  transfer.rs  update_operator.rs
low-code-carbon-credits-marketplace/contracts/src/client_utils/: client.rs  mod.rs  types.rs
low-code-carbon-credits-marketplace/contracts/src/project_token/: balance_of.rs  contract_types.rs  error.rs  events.rs  init.rs  is_verified.rs  is_verifier.rs  maturity_of.rs  mint.rs  mod.rs  operator_of.rs  retire.rs  retract.rs  state.rs  supports.rs  token_metadata.rs  transfer.rs  update_operator.rs  verifier_operations.rs
low-code-carbon-credits-marketplace/indexer/server-rust-bindings/: Cargo.toml  package.json
low-code-carbon-credits-marketplace/indexer/server-rust-bindings/src/: aux_functions.rs  external_functions.rs  lib.rs  types.rs
low-code-nft-marketplace/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  README.md  package.json  tsconfig.json
nft-minting/: .gitignore  README.md  esbuild.config.ts  package.json  tsconfig.json
not-today-satan/: release-allowlist-frontend.yaml  release-allowlist-manager-verifier.yaml  release-track-and-trace-sponsored-transaction-service-docker.yml  rust-fmt-lint.yaml
payment/: .dockerignore  README.md
payment/cis5-smart-contract-wallet/: Cargo.toml  module.wasm.v1
payment/cis5-smart-contract-wallet/src/: lib.rs
payment/smart-contract/: Cargo.toml
piggybank/: README.md  index.html  package.json  tsconfig.json
signMessage/: .prettierignore  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  package.json
signatureProof/: README.md
simple-age-verification/: package.json
simpleAgeVerification/: .dockerignore  .eslintrc.cjs  .prettierignore  Dockerfile  Jenkinsfile  README.md  package.json
sponsoredTransactions/: Dockerfile  README.md  package.json
sponsoredTransactions/backend/: CHANGELOG.md  Cargo.toml  README.md
sponsoredTransactions/backend/src/: handlers.rs  main.rs  types.rs
sponsoredTransactionsAuction/: Dockerfile  README.md
sponsoredTransactionsAuction/backend/: CHANGELOG.md  Cargo.toml  README.md
sponsoredTransactionsAuction/backend/src/: handlers.rs  main.rs  types.rs
testnet-faucet/: .env.example  .eslintrc.json  .prettierignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
trackAndTrace/: .env  README.md  docker-compose.yml
trackAndTrace/common/: Cargo.toml
trackAndTrace/common/src/: lib.rs
trackAndTrace/indexer/: CHANGELOG.md  Cargo.toml  README.md
trackAndTrace/indexer/resources/: schema.sql
trackAndTrace/indexer/src/: db.rs  lib.rs  main.rs  types.rs
trackAndTrace/sponsored-transaction-service/: CHANGELOG.md  Cargo.toml  README.md
trackAndTrace/sponsored-transaction-service/src/: main.rs  types.rs
trackAndTrace/test-scripts/: Cargo.toml  README.md  inputParameter.json
trackAndTrace/test-scripts/src/: main.rs
two-step-transfer/: README.md  index.html  package.json
voting/: .eslintrc.cjs  .gitignore  CHANGELOG.md  Dockerfile  README.md  index.html  package.json  serve.js
wCCD/: .eslintignore  CHANGELOG.md  Dockerfile  README.md  index.html  package.json
(+1044 files in other folders)
