[workspace]
resolver = "3"

# Smart contracts currently have to be standalone crates and not part of the repo workspace
# due to how cargo-concordium verifiable build works. Hence the trackAndTrace and cis2-market
# smart contract crates in this repo are not members of the workspace.
members = [
  "compliant-reward-distribution/indexer-and-server",
  "gallery/verifier",
  "sponsoredTransactionsAuction/backend",
  "sponsoredTransactions/backend",
  "trackAndTrace/test-scripts",
  "trackAndTrace/indexer",
  "trackAndTrace/sponsored-transaction-service"
]

# The smart contract crates (which are in single crate workspaces) are added implicitly as workspace members if they are used as local path dependencies.
# Hence, we repeat the explicit members as default members. These are the crates we want to run cargo commands on.
default-members = [
  "compliant-reward-distribution/indexer-and-server",
  "gallery/verifier",
  "sponsoredTransactionsAuction/backend",
  "sponsoredTransactions/backend",
  "trackAndTrace/test-scripts",
  "trackAndTrace/indexer",
  "trackAndTrace/sponsored-transaction-service"
]

[workspace.dependencies]
concordium-rust-sdk = "7.0.0"

