[workspace]
resolver = "3"

members = [
  "compliant-reward-distribution/indexer-and-server",
  "gallery/verifier",
  "sponsoredTransactions/backend",
  "sponsoredTransactionsAuction/backend",
  "trackAndTrace/test-scripts",
  "trackAndTrace/indexer",
  "trackAndTrace/common",
  "trackAndTrace/sponsored-transaction-service"
]

# Smart contracts are currently not part of the repo workspace
# due to how cargo-concordium verifiable build works. Hence, the trackAndTrace and cis2-market
# smart contract crates in this repo are not members of the workspace.
exclude = [
  "low-code-nft-marketplace/cis2-market",
  "trackAndTrace/smart-contract"
]

[workspace.dependencies]
concordium-rust-sdk = "9.0.0"

