[package]
name = "indexer"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["macros"] }
clap = { version = "4.3", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tower-http = { version = "0.4", features = [
  "trace",
  "limit",
  "fs",
  "compression-br",
  "compression-zstd",
] }
http = "0.2"
tonic = { version = "0.12", features = ["tls-roots", "tls"] }
thiserror = "1.0"
chrono = "0.4"
concordium-rust-sdk.workspace = true
# It is essential that the bump_alloc feature is **not** enabled since it will
# globally set an inefficient allocator.
track-and-trace-common = { path = "../common", features = ["serde"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tokio-postgres = { version = "0.7", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
] }
deadpool-postgres = "0.11"
handlebars = "4.5"
