[package]
name = "sponsored-transaction-service"
version = "1.0.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2021"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = {version = "0.10", features = ["tls", "tls-roots"]} # Use system trust roots.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
chrono = "0.4.19"
thiserror = "1"
rand = "0.8"
hex = "0.4.3"
concordium-rust-sdk = { path = "../../deps/concordium-rust-sdk/" }
axum = "0.7"
futures = "0.3"
tower-http = { version = "0.5", features = [
  "trace",
  "limit",
  "timeout",
  "fs",
  "compression-br",
  "compression-zstd",
  "cors",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
http = "1.0"
