[package]
name = "track-and-trace-test"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["env", "derive"] }
concordium-rust-sdk.workspace = true
tokio = { version = "1.35", features = ["rt-multi-thread", ] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
track-and-trace = { path = "../smart-contract/", default-features = false, features = ["std", "serde"] }
serde_json = "1.0"


