[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
concordium-cis2 = "3.1.0"
concordium-std = {version = "6.2", default-features = false}
wasm-bindgen = "0.2"
js-sys = "0.3.58"
sha256 = "1.1.3"
